--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,25 +51,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y chromium-browser xvfb
-          echo "CHROMIUM_PATH=$(which chromium)" >> "$GITHUB_ENV" && echo ${{ env.CHROMIUM_PATH }}
-          echo "CHROMIUM_VERSION=$(chromium --version)" >> "$GITHUB_ENV" && echo ${{ env.CHROMIUM_VERSION }}
-      - name: Load cached Chromedriver
-        id: cached-chromedriver
-        uses: actions/cache@v4
-        with:
-          path: /usr/local/bin/chromedriver
-          key: chromedriver-${{ runner.os }}-${{ env.CHROMIUM_VERSION }}
-      - name: Install Chromedriver
-        if: steps.cached-chromedriver.outputs.cache-hit != 'true'
+      - name: Setup Chromedriver
+        uses: nanasess/setup-chromedriver@v2
+      - name: Run Chromedriver
         run: |
-          CHROMIUM_FULL_VERSION=${CHROMIUM_VERSION%%.*}
-          CHROMIUM_MAJOR_VERSION=${CHROMIUM_FULL_VERSION//[!0-9]}
-          export CHROMEDRIVER_VERSION=`curl -s https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROMIUM_MAJOR_VERSION%%.*}`
-          curl -L -O "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
-          unzip chromedriver_linux64.zip && chmod +x chromedriver && sudo mv chromedriver /usr/local/bin
-      - name: Set ChromeDriver path
-        run: |
-          echo "CHROMEDRIVER_PATH=/usr/local/bin/chromedriver" >> "$GITHUB_ENV" && echo env.CHROMEDRIVER_PATH
+          export DISPLAY=:99
+          chromedriver --url-base=/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
