--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,8 @@ name: Python Tests
 on:
   pull_request:
     paths:
-      - "**/*.py"
+      - "mpscraper/**"
+      - "tests/**"
       - "poetry.lock"
       - "pyproject.toml"
       - ".github/workflows/test.yml"
@@ -10,7 +11,8 @@ on:
     branches:
       - "main"
     paths:
-      - "**/*.py"
+      - "mpscraper/**"
+      - "tests/**"
       - "poetry.lock"
       - "pyproject.toml"
       - ".github/workflows/test.yml"
@@ -33,8 +35,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        python-version: ["3.11", "3.12"]
+        os: ["ubuntu-latest"]
+        python-version: ["3.12"]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
     steps:
@@ -43,50 +45,38 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-      - name: Removing previous chrome instances on runner
-        run: sudo apt-get purge -y google-chrome-stable
-      - name: Install Chromium & xvfb
+      - name: Install xvfb & chromium-browser
         run: |
-          sudo apt-get install -y chromium-browser xvfb
-          echo "CHROMIUM_PATH=$(which chromium)" >> "$GITHUB_ENV" && echo env.CHROMIUM_PATH
-          echo "CHROMIUM_VERSION=$(chromium --version)" >> "$GITHUB_ENV" && echo env.CHROMIUM_VERSION
-      - name: Load cached Chromedriver
-        id: cached-chromedriver
-        uses: actions/cache@v3
-        with:
-          path: /usr/local/bin/chromedriver
-          key: chromedriver-${{ runner.os }}-${{ env.CHROMIUM_VERSION }}
-      - name: Install Chromedriver
-        if: steps.cached-chromedriver.outputs.cache-hit != "true"
+          sudo apt-get update
+          sudo apt-get install -y xvfb chromium-browser
+      - name: Setup Chromedriver
+        uses: nanasess/setup-chromedriver@v2
+        env:
+          CHROMEAPP: chromium-browser
+      - name: Run Chromedriver
         run: |
-          CHROMIUM_FULL_VERSION=${CHROMIUM_VERSION%%.*}
-          CHROMIUM_MAJOR_VERSION=${CHROMIUM_FULL_VERSION//[!0-9]}
-          export CHROMEDRIVER_VERSION=`curl -s https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROMIUM_MAJOR_VERSION%%.*}`
-          curl -L -O "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
-          unzip chromedriver_linux64.zip && chmod +x chromedriver && sudo mv chromedriver /usr/local/bin
-      - name: Set ChromeDriver path
-        run: |
-          echo "CHROMEDRIVER_PATH=/usr/local/bin/chromedriver" >> "$GITHUB_ENV" && echo env.CHROMEDRIVER_PATH
+          echo "CHROMIUM_PATH=$(which chromium)" >> "$GITHUB_ENV"
+          echo "CHROMEDRIVER_PATH=$(which chromedriver)" >> "$GITHUB_ENV" 
+          export DISPLAY=:99
+          chromedriver --url-base=/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          version: latest
           virtualenvs-create: true
           virtualenvs-in-project: true
-          installer-parallel: true
-      - name: Load cached Poetry venv
+      - name: Load cached venv
         id: cached-poetry-dependencies
         uses: actions/cache@v4
         with:
           path: .venv
-          key: venv-${{ runner.os }}-${{ hashFiles("**/*/poetry.lock") }}
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != "true"
-        run: |
-          poetry install --no-interaction --no-root
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-root
       - name: Run Pytest
         run: |
-          source $VENV
+          source .venv/bin/activate
           pytest -vv --cov=./ --cov-report=xml ./
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v4
@@ -100,3 +90,21 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-root
+      - name: Run Bandit
+        run: |-
+          source .venv/bin/activate
+          bandit -r ./mpscraper
