--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,11 +19,17 @@ on:
       - "pyproject.toml"
       - ".github/workflows/test.yml"
 env:
-  PYTHON_VERSION: "3.12"
+  OS_MATRIX: '["ubuntu-latest"]'
+  PYTHON_VERSION_MATRIX: '[3.13]'
 jobs:
   lint:
     name: Lint
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        os: ${{ fromJSON(env.OS_MATRIX) }}
+        python-version: ${{ fromJSON(env.PYTHON_VERSION_MATRIX) }}
+    runs-on: ${{ matrix.os }}
     permissions:
       contents: read
     steps:
@@ -31,26 +37,26 @@ jobs:
       - name: Install Python 3
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
+          python-version: ${{ matrix.python-version }}
       - uses: pre-commit/action@v3.0.1
         env:
           RUFF_OUTPUT_FORMAT: github
   test:
-    permissions:
-      contents: read
     strategy:
       fail-fast: true
       matrix:
-        os: ["ubuntu-latest"]
-        python-version: ["3.12"]
+        os: ${{ fromJSON(env.OS_MATRIX) }}
+        python-version: ${{ fromJSON(env.PYTHON_VERSION_MATRIX) }}
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: read
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v5
       - name: Install Python 3
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
+          python-version: ${{ matrix.python-version }}
       - name: Install xvfb & chromium-browser
         run: |
           sudo apt-get update
@@ -89,7 +95,12 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
   security:
-    runs-on: "ubuntu-latest"
+    strategy:
+      fail-fast: true
+      matrix:
+        os: ${{ fromJSON(env.OS_MATRIX) }}
+        python-version: ${{ fromJSON(env.PYTHON_VERSION_MATRIX) }}
+    runs-on: ${{ matrix.os }}
     permissions:
       contents: read
     steps:
@@ -97,7 +108,7 @@ jobs:
       - name: Install Python 3
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
+          python-version: ${{ matrix.python-version }}
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
